--- a/src/main/resources/jcurl/Cli.properties
+++ b/src/main/resources/jcurl/Cli.properties
@@ -20,15 +20,12 @@ param.H.long=header
 param.H.argname=header
 param.H.description=Extra header to use when getting a web page. You may specify any number of extra headers. Note that if you should add a custom header that has the same name as one of the internal ones curl would use, your externally set header will be used instead of the internal one. This allows you to make even trickier stuff than curl would normally do. You should not replace internally set headers without knowing perfectly well what you're doing. Remove an internal header by giving a replacement without content on the right side of the colon, as in: -H "Host:". If you send the custom header with no-value then its header must be terminated with a semicolon, such as -H "X-Custom-Header;" to send "X-Custom-Header:". curl will make sure that each header you add/replace is sent with the proper end-of-line marker, you should thus not add that as a part of the header content: do not add newlines or carriage returns, they will only mess things up for you. See also the -A, --user-agent and -e, --referer options. This option can be used multiple times to add/replace/remove multiple headers./
 
-param.async.description=Launch several url asynchronously (each url in one thread)
-param.asyncthreads.description=maximum paralelle url cal (maximum threads)
+param.asyncthreads.description=Maximum paralelle URL call (maximum threads)
 
-param.inputFile.description=Specify input data to drive HTTP request. One line per HTTP request :\\n \
-	GET http://www.foo.com/ \
-	GET http://www.bar.com/foo 
+param.inputFile.description=Specify file which contain a list of URL (one line per URL)
 
-param.inputPattern.description=
-param.inputTransform.description=
+param.inputPattern.description=Specify regexp pattern to transform input data (see param 'inputFile' and 'inputTransform') into URL
+param.inputTransform.description=Specify substitution string to transform input data (see param 'inputFile' and 'inputPattern') into URL. Use $1, $2, ... for catched group.
 	 
 
 manual=jcurl/manual_en.txt
