--- a/src/main/resources/jcurl/Cli.properties
+++ b/src/main/resources/jcurl/Cli.properties
@@ -1,37 +1,54 @@
-param.V.long=version
-param.V.description=Displays information about ${project.name} version it uses.
 
-param.h.long=help
-param.h.description=Usage help.
+manual = META-INF/maven/${project.groupId}/${project.artifactId}/README.md
 
-param.pp.long=pretty-print
-param.pp.description=
+param.H.argname                          = header
+param.H.description                      = Extra header to use when getting a web page. You may specify any number of \
+                                           extra headers. Note that if you should add a custom header that has the \
+                                           same name as one of the internal ones curl would use, your externally set \
+                                           header will be used instead of the internal one. This allows you to make \
+                                           even trickier stuff than curl would normally do. You should not replace \
+                                           internally set headers without knowing perfectly well what you're doing. \
+                                           Remove an internal header by giving a replacement without content on the \
+                                           right side of the colon, as in: -H "Host:". If you send the custom header \
+                                           with no-value then its header must be terminated with a semicolon, such as \
+                                           -H "X-Custom-Header;" to send "X-Custom-Header:". curl will make sure that \
+                                           each header you add/replace is sent with the proper end-of-line marker, you \
+                                           should thus not add that as a part of the header content: do not add \
+                                           newlines or carriage returns, they will only mess things up for you. See \
+                                           also the -A, --user-agent and -e, --referer options. This option can be \
+                                           used multiple times to add/replace/remove multiple headers./
+param.H.long                             = header
+param.V.description                      = Displays information about ${project.name} version it uses.
+param.V.long                             = version
+param.X.argname                          = command
+param.X.description                      = Specifies a custom request method to use when communicating with the HTTP \
+                                           server. The specified request will be used instead of the method otherwise \
+                                           used (which defaults to GET). Read the HTTP 1.1 specification for details \
+                                           and explanations. Common additional HTTP requests include PUT and DELETE.
+param.X.long                             = request
+param.X_patchConsoleEncoding.description = Fix encoding issues in cole display (see Windows console encoding issues \
+                                           with cp850 encoding)
+param.X_showEnvParams.description        = Show env variables and system properties
+param.asyncthreads.description           = Maximum paralelle URL call (maximum threads)
+param.h.description                      = Usage help.
+param.h.long                             = help
+param.i.description                      = Include the HTTP-header in the output. The HTTP-header includes things like \
+                                           server-name, date of the document, HTTP-version and more...
+param.i.long                             = include
+param.inputFile.description              = Specify file which contain a list of URL (one line per URL)
+param.inputPattern.description           = Specify regexp pattern to transform input data (see param 'inputFile' and \
+                                           'inputTransform') into URL
+param.inputTransform.description         = Specify substitution string to transform input data (see param 'inputFile' \
+                                           and 'inputPattern') into URL. Use $1, $2, ... for catched group.
+param.manual.description                 = Specifies a custom request method to use when communicating with the HTTP \
+                                           server. The specified request will be used instead of the method otherwise \
+                                           used (which defaults to GET). Read the HTTP 1.1 specification for details \
+                                           and explanations. Common additional HTTP requests include PUT and DELETE.
+param.pp.description                     = 
+param.pp.long                            = pretty-print
 
-param.i.long=include
-param.i.description=Include the HTTP-header in the output. The HTTP-header includes things like server-name, date of the document, HTTP-version and more...
-
-param.X.long=request
-param.X.argname=command
-param.X.description=Specifies a custom request method to use when communicating with the HTTP server. The specified request will be used instead of the method otherwise used (which defaults to GET). Read the HTTP 1.1 specification for details and explanations. Common additional HTTP requests include PUT and DELETE.
-
-param.manual.description=Specifies a custom request method to use when communicating with the HTTP server. The specified request will be used instead of the method otherwise used (which defaults to GET). Read the HTTP 1.1 specification for details and explanations. Common additional HTTP requests include PUT and DELETE.
-
-param.H.long=header
-param.H.argname=header
-param.H.description=Extra header to use when getting a web page. You may specify any number of extra headers. Note that if you should add a custom header that has the same name as one of the internal ones curl would use, your externally set header will be used instead of the internal one. This allows you to make even trickier stuff than curl would normally do. You should not replace internally set headers without knowing perfectly well what you're doing. Remove an internal header by giving a replacement without content on the right side of the colon, as in: -H "Host:". If you send the custom header with no-value then its header must be terminated with a semicolon, such as -H "X-Custom-Header;" to send "X-Custom-Header:". curl will make sure that each header you add/replace is sent with the proper end-of-line marker, you should thus not add that as a part of the header content: do not add newlines or carriage returns, they will only mess things up for you. See also the -A, --user-agent and -e, --referer options. This option can be used multiple times to add/replace/remove multiple headers./
-
-param.asyncthreads.description=Maximum paralelle URL call (maximum threads)
-
-param.inputFile.description=Specify file which contain a list of URL (one line per URL)
-
-param.inputPattern.description=Specify regexp pattern to transform input data (see param 'inputFile' and 'inputTransform') into URL
-param.inputTransform.description=Specify substitution string to transform input data (see param 'inputFile' and 'inputPattern') into URL. Use $1, $2, ... for catched group.
-	 
-
-manual=jcurl/manual_en.txt
-
-usage.cmdLineSyntax=java -jar jcurl.jar
-usage.header=
-usage.footer=
-usage.leftPad=5
-usage.descPad=10
+usage.cmdLineSyntax = java -jar jcurl.jar
+usage.descPad       = 10
+usage.footer        = 
+usage.header        = 
+usage.leftPad       = 5
